# ai-functions

./: .gitignore  Cargo.toml
ai_bin/: Cargo.toml
ai_bin/src/: main.rs
ai_lib/: Cargo.toml
ai_lib/src/: lib.rs
ai_macros/: Cargo.toml
ai_macros/src/: lib.rs
