[package]
name = "ai_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ai_lib = { path = "../ai_lib" }
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
convert_case = "0.6"

[lib]
proc-macro = true